--- a/fashion.ipynb
+++ b/fashion.ipynb
@@ -13,7 +13,8 @@
     "import torch.nn.functional as F\n",
     "import mnist_reader\n",
     "from torchvision import datasets, transforms\n",
-    "from torch.utils.data.sampler import SubsetRandomSampler"
+    "from torch.utils.data.sampler import SubsetRandomSampler\n",
+    "g"
    ]
   }
  ],
