--- a/fashion.ipynb
+++ b/fashion.ipynb
@@ -6,15 +6,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "import torch.nn.functional as F\n",
-    "import mnist_reader\n",
-    "from torchvision import datasets, transforms\n",
-    "from torch.utils.data.sampler import SubsetRandomSampler\n",
-    "g"
+    "from torch.autograd import Variable\n",
+    "\n",
+    "import torchvision\n",
+    "import torchvision.transforms as transforms\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from sklearn.metrics import confusion_matrix"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "train_set = torchvision.datasets.FashionMNIST(\"./data\", download=True, transform=\n",
+    "                                               transforms.Compose([transforms.ToTensor()]))\n",
+    "test_set = torchvision.datasets.FashionMNIST(\"./data\", download=True, train=False, transform=\n",
+    "                                                 transforms.Compose([transforms.ToTensor()]))                                                 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def output_label(label):\n",
+    "    output_mapping = {\n",
+    "                 0: \"T-shirt/Top\",\n",
+    "                 1: \"Trouser\",\n",
+    "                 2: \"Pullover\",\n",
+    "                 3: \"Dress\",\n",
+    "                 4: \"Coat\", \n",
+    "                 5: \"Sandal\", \n",
+    "                 6: \"Shirt\",\n",
+    "                 7: \"Sneaker\",\n",
+    "                 8: \"Bag\",\n",
+    "                 9: \"Ankle Boot\"\n",
+    "                 }\n",
+    "    input = (label.item() if type(label) == torch.Tensor else label)\n",
+    "    return output_mapping[input]"
    ]
   }
  ],
